[metadata]
author = Florian Kalinke, Marco Heyden
author_email = florian.kalinke@kit.edu, marco.heyden@kit.edu
description = A collection of unsupervised change detection algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heymarco/StreamDatasets
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
